@@ -1,5 +1,6 @@
 1.0.3 release
 
+	* fix if_nametoindex build error on windows
 	* handle overlong utf-8 sequences
 	* fix link order bug in makefile for python binding
 	* fix bug in interest calculation, causing premature disconnects
